--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="title_home">Home</string>
     <string name="title_search">Search</string>
     <string name="title_library">Library</string>
+    <string name="download_channel_name">Song Downloads</string>
+    <string name="download_channel_description">Shows progress of song downloads</string>
 </resources>
